syntax = "proto3";
package heimdall.auth.v1beta1;

import "gogoproto/gogo.proto";

option go_package = "github.com/maticnetwork/heimdall/x/auth/types";


// GenesisState defines the checkpoint module's genesis state.
message BaseAccount {
  option (gogoproto.goproto_getters)  = false;
  option (gogoproto.goproto_stringer) = false;
  option (gogoproto.unmarshaler)        = false;
  option (gogoproto.marshaler)        = false;
  option (gogoproto.sizer)        = false;

string                        address = 1;
  // string                        address = 1 [
  //   (gogoproto.casttype)   = "github.com/maticnetwork/heimdall/types/common.HeimdallAddress"
  // ];
  string                     coins = 2 [
    (gogoproto.casttype)   = "github.com/cosmos/cosmos-sdk/types.Coins"
  ];
  bytes           pub_key = 3 [
    (gogoproto.casttype)   = "github.com/tendermint/tendermint/crypto.PubKey"
  ];
  uint64                        account_number = 4;
  uint64                        sequence = 5;
}
